feat: Add page layout

--- a/about-me.html
+++ b/about-me.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Home - Ploter Maksim</title>
+    <title>About me - Ploter Maksim</title>
     <meta charset="UTF-8">
     <script src="https://kit.fontawesome.com/b210ec124a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -23,10 +23,10 @@
         <aside class="website__aside">
             <div class="website-author-intro__container">
                 <a href="index.html">
-                    <img class="website-author-intro__portrait" src="images/portrait.jpg" alt="portrait">
-                    <h2 class="website-author__name">Maksim Ploter</h2>
+                    <img class="website-author-intro__portrait" src="images/portrait.jpg">
+                    <h1 class="website-author__name">Maksim Ploter</h1>
                 </a>
-                <p class="website-author-intro">Software engineer, Computer science enthusiast</p>
+                <h2 class="">Software engineer, Computer science enthusiast</h2>
             </div>
             <nav class="website__navigation">
                 <ul class="website__navigation__menu">
@@ -55,15 +55,14 @@
             </ul>
         </aside>
         <main class="page__container">
-            <h1 class="page_name">Articles</h1>
-<!--            <article class="article">-->
-<!--                <h2>Agile</h2>-->
-<!--                <p>Agile values.</p>-->
-<!--                <p>Agile principles.</p>-->
-<!--                <a href="">Read</a>-->
-<!--            </article>-->
+            <h1 class="page_name">About me</h1>
+            <!--            <article class="article">-->
+            <!--                <h2>Agile</h2>-->
+            <!--                <p>Agile values.</p>-->
+            <!--                <p>Agile principles.</p>-->
+            <!--                <a href="">Read</a>-->
+            <!--            </article>-->
         </main>
     </div>
-
 </body>
 </html>
