feat: Add jekyll

--- a/index.html
+++ b/index.html
@@ -1,69 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Home - Ploter Maksim</title>
-    <meta charset="UTF-8">
-    <script src="https://kit.fontawesome.com/b210ec124a.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        .site-menu ul {
-            list-style-type: none;
-        }
-        .side-information ul {
-            list-style-type: none;
-        }
-        .contact-link__github__logo::before {
-            content: "\f09b";
-        }
-    </style>
-    <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-    <div class="website__container">
-        <aside class="website__aside">
-            <div class="website-author-intro__container">
-                <a href="index.html">
-                    <img class="website-author-intro__portrait" src="images/portrait.jpg" alt="portrait">
-                    <h2 class="website-author__name">Maksim Ploter</h2>
-                </a>
-                <p class="website-author-intro">Software engineer, Computer science enthusiast</p>
-            </div>
-            <nav class="website__navigation">
-                <ul class="website__navigation__menu">
-                    <li class="site-menu__category">
-                        <a href="index.html" >Articles</a>
-                    </li>
-                    <li class="site-menu__category">
-                        <a href="about-me.html">About me</a>
-                    </li>
-                </ul>
-            </nav>
+---
+layout: default
+title: Home
+permalink: /
+---
 
-            <ul class="website-author-social-network__links">
-                <li class="website-author-social-network__link">
-                    <i class="fa fa-github"></i>
-                    <a href="https://github.com/Maxvgrad">Github</a>
-                </li>
-                <li class="website-author-social-network__link">
-                    <i class="fab fa-stack-overflow"></i>
-                    <a href="https://stackoverflow.com/users/9215813/maksim-ploter">StackOverflow</a>
-                </li>
-                <li class="website-author-social-network__link">
-                    <i class="fa fa-linkedin"></i>
-                    <a href="https://www.linkedin.com/in/maksimvinogradov/">Linkedin</a>
-                </li>
-            </ul>
-        </aside>
-        <main class="page__container">
-            <h1 class="page_name">Articles</h1>
-<!--            <article class="article">-->
-<!--                <h2>Agile</h2>-->
-<!--                <p>Agile values.</p>-->
-<!--                <p>Agile principles.</p>-->
-<!--                <a href="">Read</a>-->
-<!--            </article>-->
-        </main>
-    </div>
-
-</body>
-</html>
+<h1>Home page</h1>
