--- a/articles.html
+++ b/articles.html
@@ -3,7 +3,7 @@ layout: default
 title: Articles
 permalink: /articles
 ---
-<h1>Latest Articles</h1>
+<h1 class="title">Latest Articles</h1>
 
 <ul>
     {% for post in site.posts %}
