--- a/articles.html
+++ b/articles.html
@@ -8,6 +8,7 @@ permalink: /articles
 <ul>
     {% for post in site.posts %}
     <li>
+        <img src="{{ post.img_src }}" alt="{{ post.title }}">
         <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
         {{ post.excerpt }}
     </li>
